kubernetes/services/radarr.yml
---
apiVersion: v1
kind: Service
metadata:
  name: radarr
  namespace: default
spec:
  ports:
    - protocol: TCP
      name: web
      port: 7878
  selector:
    app: radarr

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: radarr
  namespace: default
spec:
  tls:
    - hosts:
        - radarr.${DOMAIN_NAME}
      secretName: wilcard-main-domain-tls
  rules:
    - host: radarr.${DOMAIN_NAME}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: radarr
                port:
                  name: web

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: radarr
  namespace: default
  labels:
    app: radarr
  annotations:
    keel.sh/policy: minor
    keel.sh/trigger: poll
    keel.sh/pollSchedule: "@weekly"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: radarr
  template:
    metadata:
      labels:
        app: radarr
    spec:
      affinity:
        nodeAffinity:
          # Only on NAS nodes
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: nas
                    operator: In
                    values:
                      - "true"
      containers:
        - name: app
          image: lscr.io/linuxserver/radarr:latest
          resources:
            requests:
              memory: "512Mi"
              cpu: "0.25"
            limits:
              memory: "2048Mi"
              cpu: "1.00"
          ports:
            - name: web
              containerPort: 7878
          volumeMounts:
            - name: config
              mountPath: /config
            - name: downloads
              mountPath: /downloads
            - name: jellyfin
              mountPath: /jellyfin
      volumes:
        - name: config
          hostPath:
            path: /storage/radarr/config
        - name: downloads
          hostPath:
            path: /storage/aria2/downloads
        - name: jellyfin
          hostPath:
            path: /storage/jellyfin/media
